Remove the log4j hack and make Luke a proper module.